Fixed grid-column layout overflow with flex-container.

--- a/app/assets/styles/login/login.scss
+++ b/app/assets/styles/login/login.scss
@@ -4,7 +4,6 @@
 
 .aside {
   width: 40%;
-  float: right;
 }
 .aside > nav:nth-child(2) {
   width: 65% ;
