--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -32,8 +32,7 @@ section.ticket-packages > ul:last-child > li:first-child {
   width: 60%; }
 
 .aside {
-  width: 40%;
-  float: right; }
+  width: 40%; }
 
 .aside > nav:nth-child(2) {
   width: 65%;
